--- a/OceanFrontend/package.json
+++ b/OceanFrontend/package.json
@@ -17,6 +17,7 @@
     "react-leaflet": "^5.0.0",
     "recharts": "^3.4.1",
     "shadcn": "^3.5.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
