--- a/oceanbackend/package.json
+++ b/oceanbackend/package.json
@@ -32,7 +32,9 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "rss-parser": "^3.13.0",
-    "sentiment": "^5.0.2"
+    "sentiment": "^5.0.2",
+    "socket.io": "^4.8.1",
+    "twilio": "^5.10.6"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
