--- a/OceanFrontend/package.json
+++ b/OceanFrontend/package.json
@@ -15,6 +15,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.10.0",
     "recharts": "^3.4.1",
     "shadcn": "^3.5.0",
     "socket.io-client": "^4.8.1",
