--- a/oceanbackend/package.json
+++ b/oceanbackend/package.json
@@ -5,10 +5,14 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js",
+    "build": "npm run build:backend && npm run build:frontend",
+    "build:backend": "tsc",
+    "build:frontend": "cd ../OceanFrontend && npm install && npm run build",
+    "start": "NODE_ENV=production node dist/index.js",
     "seed": "ts-node src/scripts/seedData.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "railway:build": "npm install && npm run build",
+    "railway:start": "npm start"
   },
   "keywords": [
     "ocean",
