admin route cleanup

--- a/OceanFrontend/.env.production
+++ b/OceanFrontend/.env.production
@@ -1,2 +1,2 @@
-VITE_API_URL=/api
-VITE_SOCKET_URL=
+VITE_API_URL=https://ocean-ochre.vercel.app/api
+VITE_SOCKET_URL=https://ocean-ochre.vercel.app
