--- a/oceanbackend/package.json
+++ b/oceanbackend/package.json
@@ -10,6 +10,7 @@
     "build:frontend": "cd ../OceanFrontend && npm install && npm run build",
     "start": "NODE_ENV=production node dist/index.js",
     "seed": "ts-node src/scripts/seedData.ts",
+    "create-admin": "ts-node src/scripts/createAdmin.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "railway:build": "npm install && npm run build",
     "railway:start": "npm start"
